assets/css/_menu-right.scss
#TableOfContents ul,
#TableOfContents li {
  list-style: none;
  margin-left: 0;
}

// right menu
#TableOfContents li a {
  color: #6a6976;
  padding-top: 0.3rem;
  padding-bottom: 0.3rem;
  font-size: 0.9rem;
  border-left: 1px solid transparent;
}

html[data-theme="light"] {
  #TableOfContents li a {
    color: #6a6976;
  }

  #TableOfContents li a:hover {
    color: #00437b !important;
  }
}

html[data-theme="dark"] {
  #TableOfContents li a {
    color: #a3a6b1;
  }

  #TableOfContents li a:hover {
    color: #f1f1f6 !important;
  }
}

// sub-menu indenting
.menu-right #TableOfContents li li a {
  color: #888 !important;
  text-indent: 5px;
}

.menu-right #TableOfContents li.active,
.menu-right #TableOfContents li a:hover {
  border-left: 1px solid #d3d3d3;
}

// scrollspy color
.menu-right #TableOfContents li .active {
  color: #000 !important;
  border-left: 1px solid #0d6aa8 !important;
}

.menu-right a[href^="http"]::after {
  filter: saturate(0%);
}

